glFusion ChangeLog

v1.1.4
------
- Installation did not properly detect missing siteconfig.php.dist file (Mark)
- Advanced search using date range did not return stories or comments in
  that date range (Mark)

Site Tailor
-----------
- 0000434: [Menu] copy menu does not work (mark)

v1.1.3
------
- What's New block did not honor the URL rewrite setting for stories (Mark)
- 0000424: Reorder fields on 'Username & Password' tab to be more intuitive (Eric)
- Increased size of Forum category title text (Eric)
- Limit long term session cookie to user's ip to limit chances of
  user masquerading (Mark)
- 0000289 cleanup story options and incorporate template options (mark)
- 0000423 Not all staticpage options are cloned (mark)
- 0000369 Can we make theme code name-neutral (again) (mark)
- 0000405/0000289 Removed PDF option references and consistency fixes in story templates (Eric)
- Fixed issue where 1 or 111 would show up in templates (Mark)
- Fixed old reference to css.php in FCKeditor (Mark)
- Updated getID3() to latest production release (Mark)
- 0000330: Static page bullets not working in IE and proper nesting of typography icons (Eric)
- 0000403: Search box text is hard coded in header.thtml (Eric)
- 0000418: Forum code block max width breaks fixed width layouts (Eric)
- 0000416: After mailing users, screen refreshes to admin/moderation.php not admin/index.php (Eric)
- 0000290: Language & Layout inconsistencies (Eric)
- Added config switch to include template location comments in page
  source (Mark & Eric)
- Improved error detection when sending emails (Mark)
- Tweaked plugin upload to not crash when hitting certain permission
  errors (Mark)
- 0000415: css.php and js.php consume too much CPU (mark)
- 0000408: "Edit a Comment' is hard coded in the source (mark)
- 0000411: Sending trackbacks to WordPress sites fail (mark)
- 0000410: Uploading large plugins could error with max_execution_time exceeded
           (mark)